--- a/notebooks/analysis.ipynb
+++ b/notebooks/analysis.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "42522fe8-bec9-4bdc-afef-3025437786c7",
    "metadata": {},
    "outputs": [],
@@ -564,7 +564,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\radhi\\AppData\\Local\\Temp\\ipykernel_17332\\670474715.py:2: FutureWarning: \n",
+      "C:\\Users\\radhi\\AppData\\Local\\Temp\\ipykernel_12800\\670474715.py:2: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `x` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "66a70501-8e85-4bbe-a830-fc34cd88afb5",
    "metadata": {},
    "outputs": [],
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "5965e290-043c-48f8-aa4f-48d4cf1e6fab",
    "metadata": {},
    "outputs": [],
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 21,
    "id": "62112e3d-7a2e-4e48-8480-925b628f398d",
    "metadata": {},
    "outputs": [
@@ -743,7 +743,7 @@
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 73350, number of negative: 61939\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.011057 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.006535 seconds.\n",
       "You can set `force_row_wise=true` to remove the overhead.\n",
       "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 54\n",
@@ -772,7 +772,9 @@
       "1    RF       0.698542            0.003270\n",
       "2   XGB       0.719859            0.003126\n",
       "3  LGBM       0.725233            0.003174\n",
-      "\\n==================================================\\n\n"
+      "\n",
+      "==================================================\n",
+      "\n"
      ]
     }
    ],
@@ -787,7 +789,7 @@
     "results_df, model_predictions = pipeline_classification(pipelines, X_train, y_train, X_test)\n",
     "print('---Model Comparison Results---')\n",
     "print(results_df)\n",
-    "print(\"\\\\n\" + \"=\"*50 + \"\\\\n\")"
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")"
    ]
   },
   {
@@ -795,13 +797,13 @@
    "id": "3bab8daf-66d4-447b-85b7-bc18595b77b5",
    "metadata": {},
    "source": [
-    "### 5.2. Hyperparameter Tuning for XGBoost\n",
-    "Based on the initial comparison, XGBoost performed the best. Now, we'll tune its hyperparameters."
+    "### 5.2. Hyperparameter Tuning for LightGBM\n",
+    "Based on the initial comparison, LightGBM performed the best. Now, we'll tune its hyperparameters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "11d895c2-312f-4245-bf29-318b029e0caa",
    "metadata": {},
    "outputs": [
@@ -810,8 +812,10 @@
      "output_type": "stream",
      "text": [
       "Best Parameters: {'num_leaves': 20, 'n_estimators': 200, 'max_depth': 6, 'learning_rate': 0.01}\n",
-      "\\nTuned LightGBM Model Accuracy: 0.73\n",
-      "\\nClassification Report for Tuned LightGBM:\n",
+      "\n",
+      "Tuned LightGBM Model Accuracy: 0.73\n",
+      "\n",
+      "Classification Report for Tuned LightGBM:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "No Treatment       0.78      0.58      0.66     15485\n",
@@ -849,8 +853,8 @@
     "print(f\"Best Parameters: {random_search.best_params_}\")\n",
     "tuned_lgbm_pred = best_lgbm_model.predict(X_test)\n",
     "\n",
-    "print(f\"\\\\nTuned LightGBM Model Accuracy: {accuracy_score(y_test, tuned_lgbm_pred):.2f}\")\n",
-    "print(\"\\\\nClassification Report for Tuned LightGBM:\")\n",
+    "print(f\"\\nTuned LightGBM Model Accuracy: {accuracy_score(y_test, tuned_lgbm_pred):.2f}\")\n",
+    "print(\"\\nClassification Report for Tuned LightGBM:\")\n",
     "print(classification_report(y_test, tuned_lgbm_pred, target_names=['No Treatment', 'Treatment']))\n",
     "\n",
     "cm = confusion_matrix(y_test, tuned_lgbm_pred)\n",
@@ -872,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 25,
    "id": "15b8a43d-0c1f-4092-831d-6be3b518e0b0",
    "metadata": {},
    "outputs": [
@@ -887,7 +891,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\radhi\\AppData\\Local\\Temp\\ipykernel_17332\\2173649442.py:8: FutureWarning: \n",
+      "C:\\Users\\radhi\\AppData\\Local\\Temp\\ipykernel_12800\\2173649442.py:8: FutureWarning: \n",
       "\n",
       "Passing `palette` without assigning `hue` is deprecated and will be removed in v0.14.0. Assign the `y` variable to `hue` and set `legend=False` for the same effect.\n",
       "\n",
@@ -928,7 +932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 27,
    "id": "a0786a67-b2eb-4497-8ba5-5f351c1709e4",
    "metadata": {},
    "outputs": [
@@ -938,7 +942,9 @@
      "text": [
       "--- Saving Final Model and Encoders ---\n",
       "Model, encoders, and training columns saved successfully.\n",
-      "\\n==================================================\\n\n"
+      "\n",
+      "==================================================\n",
+      "\n"
      ]
     }
    ],
@@ -957,7 +963,7 @@
     "    pickle.dump(X_train.columns.tolist(), f)\n",
     "\n",
     "print(\"Model, encoders, and training columns saved successfully.\")\n",
-    "print(\"\\\\n\" + \"=\"*50 + \"\\\\n\")"
+    "print(\"\\n\" + \"=\"*50 + \"\\n\")"
    ]
   },
   {
